--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<head>
 
   	<!-- HEAD MUST HAVE -->
-		<title>AghyadIT2</title>
+		<title>Damascus City</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
@@ -254,7 +254,7 @@
 
           <section>
             <header>
-            	<figure><a href="#" class="image featured"><img src="./img/th.jpg" alt=""></a></figure>
+            	<figure><a href="#" class="image featured"><img src="./img/umayyad.jpg" alt=""></a></figure>
               <h3>Damascene Theater </h3>
             </header>
             <p>
