--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 
         <ul id="main-menu" class="UPP DF">
           <li class="current"><a href="index.html">Welcome</a></li>
-          <li><a href="right-sidebar.html">Right Sidebar</a></li>
-          <li><a href="no-sidebar.html">No Sidebar</a></li>
+          <li><a href="right-sidebar.html">History</a></li>
+          <li><a href="no-sidebar.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="#" class="button special">Login</a></li>
+          <!-- <li><a href="#" class="button special">Login</a></li> -->
         </ul>
 
       </nav>
@@ -141,20 +141,8 @@
           </footer> -->
         </div>
 
-        <!-- <ul class="featured-icons DF">
-          <li><i class="icon fa-clock-o"></i></li>
-          <li><i class="icon fa-volume-up"></i></li>
-          <li><i class="icon fa-laptop"></i></li>
-          <li><i class="icon fa-inbox"></i></li>
-          <li><i class="icon fa-lock"></i></li>
-          <li><i class="icon fa-cog"></i></li>
-        </ul> -->
-
       </section>
       <!-- END CONTAINER STYLE 1 -->
-
-
-
 
       <!-- START CONTAINER STYLE 3 -->
       <section class="container style-3 AC BG-white">
