--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- START BODY HEADER -->
     <header id="header" class="body-header DF">
 
-      <h1 id="logo">AGHYAD<span class="FW-300">design</span></h1>
+      <h1 id="logo">AGHYAD<span class="FW-300">Dandash</span></h1>
 
       <div id="nav-triggers">
         <a id="open-menu" class="menu-trigger DF"><i class="icon fa-menu"></i></a>
@@ -61,8 +61,8 @@
 
         <ul id="main-menu" class="UPP DF">
           <li class="current"><a href="index.html">Welcome</a></li>
-          <li><a href="right-sidebar.html">History</a></li>
-          <li><a href="no-sidebar.html">About</a></li>
+          <li><a href="history.html">History</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
           <!-- <li><a href="#" class="button special">Login</a></li> -->
         </ul>
