--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <!-- START BODY HEADER -->
     <header id="header" class="body-header header-alt DF">
 
-      <h1 id="logo"><a href="index.html">AGHYAD<span class="FW-300">design</span></a></h1>
+      <h1 id="logo"><a href="index.html">AGHYAD<span class="FW-300">dandash</span></a></h1>
       
       <div id="nav-triggers">
         <a id="open-menu" class="menu-trigger DF"><i class="icon fa-menu"></i></a>
@@ -52,10 +52,10 @@
 
         <ul id="main-menu" class="UPP DF">
           <li><a href="index.html">Welcome</a></li>
-          <li><a href="right-sidebar.html">Right Sidebar</a></li>
-          <li><a href="no-sidebar.html">No Sidebar</a></li>
+          <li><a href="history.html">history</a></li>
+          <li><a href="about.html">about</a></li>
           <li class="current"><a href="contact.html">Contact</a></li>
-          <li><a href="#" class="button special">Login</a></li>
+          <!-- <li><a href="#" class="button special">Login</a></li> -->
         </ul>
         
       </nav>
@@ -126,7 +126,7 @@
         <li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
         <li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
         <li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
-        <li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+        <!-- <li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li> -->
       </ul>
 
       <ul class="copyright">
