--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     <!-- START BODY HEADER -->
     <header id="header" class="body-header header-alt DF">
 
-      <h1 id="logo">AGHYAD<span class="FW-300">design</span></h1>
+      <h1 id="logo">AGHYAD<span class="FW-300">dandash</span></h1>
       
       <div id="nav-triggers">
         <a id="open-menu" class="menu-trigger DF"><i class="icon fa-menu"></i></a>
@@ -93,30 +93,56 @@
       <section class="container BG-white">
 
         <header>
-          <figure><a href="#" class="image featured"><img src="assets/images/pic04-photo.jpg" alt=""></a></figure>
-          <h3 class="MT-4">Dolore Amet Consequat</h3>
+          <figure><a href="#" class="image featured"><img src="" alt=""></a></figure>
+          <h3 class="MT-4"></h3>
         </header>
         
-        <p>
-          Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. 
-          Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. 
-          Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. 
-          Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. 
-          Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. 
-          Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.
-        </p>
-        <p>
-          Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. 
-          Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. 
-          Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. 
-          Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. 
-          Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan.
-        </p>
-        <p>
-          In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. 
-          Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. 
-          Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit ipsum arcu tristique est.
-        </p>
+        <!-- Slideshow container -->
+<div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+      <div class="numbertext">1</div>
+      <img src="./img/souq.jpg" style="width:100%">
+      <div class="text"></div>
+    </div>
+  
+    <div class="mySlides fade">
+      <div class="numbertext">2</div>
+      <img src="./img/mar5.jpg" style="width:100%">
+      <div class="text"></div>
+    </div>
+  
+    <div class="mySlides fade">
+      <div class="numbertext">3</div>
+      <img src="./img/da4.jpg" style="width:100%">
+      <div class="text"></div>
+    </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">4</div>
+        <img src="./img/souq.jpg" style="width:100%">
+        <div class="text"></div>
+      </div>
+
+      <div class="mySlides fade">
+          <div class="numbertext">5</div>
+          <img src="./img/umayyad.jpg" style="width:100%">
+          <div class="text">5</div>
+        </div>
+  
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+  
+  <!-- The dots/circles -->
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
 
       </section>
       <!-- END CONTAINER -->
