--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <p>please contact us</p>
       <ul class="icons DF">
         <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100007167616589" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
         <li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
         <li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
         <!-- <li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li> -->
