--- a/about.html
+++ b/about.html
@@ -128,9 +128,26 @@
       <div class="mySlides fade">
           <div class="numbertext">5</div>
           <img src="./img/umayyad.jpg" style="width:100%">
-          <div class="text">5</div>
+          <div class="text"></div>
         </div>
-  
+ 
+        <div class="mySlides fade">
+            <div class="numbertext">6</div>
+            <img src="./img/damac-2.jpg" style="width:100%">
+            <div class="text"></div>
+          </div>
+
+          <div class="mySlides fade">
+              <div class="numbertext">7</div>
+              <img src="./img/market.jpg" style="width:100%">
+              <div class="text"></div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">8</div>
+                <img src="./img/old-wroad.jpg" style="width:100%">
+                <div class="text"></div>
+              </div>
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
