add a new logo and concting with the home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en">
+<html dir="ltr" lang="en ">  
 
 	<!-- START DOCUMENT HEAD (méta données, invisible)
   -------------------------------------------------->
@@ -48,8 +48,12 @@
     <!-- START BODY HEADER -->
     <header id="header" class="body-header DF">
 
-      <h1 id="logo">AGHYAD<span class="FW-300">Dandash</span></h1>
-
+      <!-- <h1 id="logo">AGHYAD<span class="FW-300">Dandash</span></h1> -->
+      <figure id="logo-1">
+       <a href="index.html"> <img src="img/aghhh.png" alt=""> </a>
+      </figure>
+      
+      
       <div id="nav-triggers">
         <a id="open-menu" class="menu-trigger DF"><i class="icon fa-menu"></i></a>
         <a id="close-menu" class="menu-trigger DF"><i class="icon fa-close"></i></a>
@@ -215,7 +219,7 @@
 
     <!-- START CTA -->
     <section id="call-to-action" class="container AC">
-
+ 
       <header>
         <h2>would you like to know more <strong>information</strong> ?</h2>
         <!-- <p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p> -->
@@ -237,7 +241,7 @@
       <p>please contact us</p>
       <ul class="icons DF">
         <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="https://www.facebook.com/profile.php?id=100007167616589" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
+        <li><a href="" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
         <li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
         <li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
         <!-- <li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li> -->
