--- a/history.html
+++ b/history.html
@@ -50,8 +50,12 @@
     <!-- START BODY HEADER -->
     <header id="header" class="body-header header-alt DF">
 
-      <h1 id="logo">AGHYAD<span class="FW-300">dandash</span></h1>
-      
+      <!-- <h1 id="logo">AGHYAD<span class="FW-300">dandash</span></h1> -->
+      <figure id="logo-1">
+          <a href="index.html"> <img src="img/aghyad.png" alt=""> </a>
+         </figure>
+   
+
       <div id="nav-triggers">
         <a id="open-menu" class="menu-trigger DF"><i class="icon fa-menu"></i></a>
         <a id="close-menu" class="menu-trigger DF"><i class="icon fa-close"></i></a>
