add a new logo and concting with the home page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <!-- <h1 id="logo">AGHYAD<span class="FW-300">Dandash</span></h1> -->
       <figure id="logo-1">
-       <a href="index.html"> <img src="img/aghhh.png" alt=""> </a>
+       <a href="index.html"> <img src="img/aghyad.png" alt=""> </a>
       </figure>
       
       
